fix unreadable text

--- a/themes/hello-friend-ng/assets/scss/_main.scss
+++ b/themes/hello-friend-ng/assets/scss/_main.scss
@@ -202,7 +202,8 @@ em, i, strong {
   }
 
   @media (prefers-color-scheme: light) {
-    color: black;
+    color: white;
+    // color: black;
   }
 
   [data-theme=dark] & {
